--- a/Restaurant/BL.Restaurant/BL.Restaurant.csproj
+++ b/Restaurant/BL.Restaurant/BL.Restaurant.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ProductosBL.cs" />
     <Compile Include="RestaurantSeguridadBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
