--- a/Restaurant/Restaurant/Win.Restaurant.csproj
+++ b/Restaurant/Restaurant/Win.Restaurant.csproj
@@ -182,6 +182,8 @@
     <None Include="Properties\DataSources\BL.Restaurant.Producto.datasource" />
     <None Include="Properties\DataSources\BL.Restaurant.ProductosBL.datasource" />
     <None Include="Properties\DataSources\BL.Restaurant.RestaurantSeguridadBL.datasource" />
+    <None Include="Properties\DataSources\BL.Restaurant.Tipo.datasource" />
+    <None Include="Properties\DataSources\BL.Restaurant.TipoBL.datasource" />
     <None Include="Properties\DataSources\System.Data.Entity.SqlServer.SqlAzureExecutionStrategy1.datasource" />
     <None Include="Properties\DataSources\System.Data.Entity.SqlServer.SqlFunctions1.datasource" />
     <None Include="Properties\DataSources\System.Data.Entity.SqlServer.SqlHierarchyIdFunctions1.datasource" />
