--- a/Restaurant/BL.Restaurant/BL.Restaurant.csproj
+++ b/Restaurant/BL.Restaurant/BL.Restaurant.csproj
@@ -52,17 +52,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaBL.cs" />
     <Compile Include="Contexto.cs" />
     <Compile Include="DatosdeInicio.cs" />
+    <Compile Include="ClientesBL.cs" />
+    <Compile Include="FacturaBL.cs" />
     <Compile Include="ProductosBL.cs" />
     <Compile Include="RestaurantSeguridadBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoBL.cs" />
+    <Compile Include="TiemposBL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\ProductosBL.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
